# serializer version: 1
# name: test_load_cellpack[bcif]
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[bcif].1
  '''
  Cv0
  Cv1
  Cv10
  Cv11
  Cv12
  Cv13
  Cv2
  Cv3
  Cv4
  Cv5
  Cv6
  Cv7
  Cv8
  Cv9
  Ed0
  Ed1
  Ed2
  Ed3
  Ed4
  Ed5
  Ed6
  Ed7
  Ed8
  Gb0
  Gb1
  Gb2
  Gb3
  Gg01
  Gg02
  Gg03
  Gg04
  Gg11
  Gg12
  Gg13
  Gg14
  Gh01
  Gh02
  Gh03
  Gh04
  Gi01
  Gi02
  Gi03
  Gi04
  '''
# ---
# name: test_load_cellpack[bcif].10
  tuple(
    5987,
    3,
  )
# ---
# name: test_load_cellpack[bcif].11
  array([[-3.26238656e+00,  5.79956484e+00, -3.91330600e+00],
         [-3.26721239e+00,  5.80329418e+00, -3.89982200e+00],
         [-3.27092028e+00,  5.79015923e+00, -3.92088842e+00],
         ...,
         [ 1.17071695e+01, -9.58848190e+00,  1.12691484e-02],
         [ 1.17131033e+01, -9.60934925e+00,  9.27020703e-03],
         [ 1.16894846e+01, -9.62069416e+00,  5.10454848e-02]])
# ---
# name: test_load_cellpack[bcif].2
  array([1, 1, 1, ..., 1, 1, 1])
# ---
# name: test_load_cellpack[bcif].3
  array([23, 24, 25, ..., 42, 42, 42])
# ---
# name: test_load_cellpack[bcif].4
  array([    0,     0,     0, ..., 18199, 18200, 18201])
# ---
# name: test_load_cellpack[bcif].5
  array([ 0,  0,  0, ..., 14, 14, 14])
# ---
# name: test_load_cellpack[bcif].6
  array([[ 10.19999981,  10.19999981,   0.        ],
         [ 10.19999981,  10.19999981,   0.        ],
         [ 10.19999981,  10.19999981,   0.        ],
         ...,
         [ 11.47329998, -10.04710007,   0.33160001],
         [ 10.7361002 ,  -9.39120007,   0.33990002],
         [ 10.44810104,  -9.1335001 ,   0.33970001]])
# ---
# name: test_load_cellpack[bcif].7
  array([ True,  True,  True, ...,  True,  True,  True])
# ---
# name: test_load_cellpack[bcif].8
  array([[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         ...,
         [ 8.32493484e-01, -3.08766663e-01, -4.60030466e-01,
          -4.29944375e-05],
         [ 7.06966341e-01, -4.71753180e-01, -5.27019918e-01,
           6.62047751e-05],
         [ 7.06966341e-01, -4.71753180e-01, -5.27019918e-01,
           6.62047751e-05]])
# ---
# name: test_load_cellpack[bcif].9
  array([], dtype=bool)
# ---
# name: test_load_cellpack[cif]
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[cif].1
  '''
  Cv0
  Cv1
  Cv10
  Cv11
  Cv12
  Cv13
  Cv2
  Cv3
  Cv4
  Cv5
  Cv6
  Cv7
  Cv8
  Cv9
  Ed0
  Ed1
  Ed2
  Ed3
  Ed4
  Ed5
  Ed6
  Ed7
  Ed8
  Gb0
  Gb1
  Gb2
  Gb3
  Gg01
  Gg02
  Gg03
  Gg04
  Gg11
  Gg12
  Gg13
  Gg14
  Gh01
  Gh02
  Gh03
  Gh04
  Gi01
  Gi02
  Gi03
  Gi04
  '''
# ---
# name: test_load_cellpack[cif].10
  tuple(
    5987,
    3,
  )
# ---
# name: test_load_cellpack[cif].11
  array([[-3.26238656e+00,  5.79956484e+00, -3.91330600e+00],
         [-3.26721239e+00,  5.80329418e+00, -3.89982200e+00],
         [-3.27092028e+00,  5.79015923e+00, -3.92088842e+00],
         ...,
         [ 1.17071695e+01, -9.58848190e+00,  1.12691484e-02],
         [ 1.17131033e+01, -9.60934925e+00,  9.27020703e-03],
         [ 1.16894846e+01, -9.62069416e+00,  5.10454848e-02]])
# ---
# name: test_load_cellpack[cif].2
  array([1, 1, 1, ..., 1, 1, 1])
# ---
# name: test_load_cellpack[cif].3
  array([23, 24, 25, ..., 42, 42, 42])
# ---
# name: test_load_cellpack[cif].4
  array([    0,     0,     0, ..., 18199, 18200, 18201])
# ---
# name: test_load_cellpack[cif].5
  array([ 0,  0,  0, ..., 14, 14, 14])
# ---
# name: test_load_cellpack[cif].6
  array([[ 10.19999981,  10.19999981,   0.        ],
         [ 10.19999981,  10.19999981,   0.        ],
         [ 10.19999981,  10.19999981,   0.        ],
         ...,
         [ 11.47329998, -10.04710007,   0.33160001],
         [ 10.7361002 ,  -9.39120007,   0.33990002],
         [ 10.44810104,  -9.1335001 ,   0.33970001]])
# ---
# name: test_load_cellpack[cif].7
  array([ True,  True,  True, ...,  True,  True,  True])
# ---
# name: test_load_cellpack[cif].8
  array([[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         ...,
         [ 8.32493484e-01, -3.08766663e-01, -4.60030466e-01,
          -4.29944375e-05],
         [ 7.06966341e-01, -4.71753180e-01, -5.27019918e-01,
           6.62047751e-05],
         [ 7.06966341e-01, -4.71753180e-01, -5.27019918e-01,
           6.62047751e-05]])
# ---
# name: test_load_cellpack[cif].9
  array([], dtype=bool)
# ---
